examples/errors/raise_basic.zn
void main(){
    println("About to raise an error...")
    raise "something went wrong"
    println("this will never print")
}
